cambio en ventana de nueva solicitud y dashboard

--- a/nueva_solicitud.html
+++ b/nueva_solicitud.html
@@ -49,7 +49,7 @@
                     <div class="header__navbar">
                         <ul class="list-unstyled">
                             <li>
-                                <a href="#">
+                                <a href="dashboard.html">
                                     <i class="fas fa-tachometer-alt"></i>Dashboard
                                     <span class="bot-line"></span>
                                 </a>
@@ -72,62 +72,38 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="header__tool">
-                        <div class="header-button-item has-noti js-item-menu">
+                    <div class="header__tool ">
+                        <div class="header-button-item has-noti js-item-menu notificationCard">
                             <i class="zmdi zmdi-notifications"></i>
                             <div class="notifi-dropdown notifi-dropdown--no-bor js-dropdown">
                                 <div class="notifi__title">
-                                    <p>Tienes 3 notificacines</p>
+                                    <p>Notificaciones</p>
                                 </div>
                                 <div class="notifi__item">
                                     <div class="bg-c1 img-cir img-40">
-                                        <i class="zmdi zmdi-email-open"></i>
+                                        <i class="fa fa-check"></i>
                                     </div>
                                     <div class="content">
-                                        <p>You got a email notification</p>
+                                        <p><strong>1</strong> Solicitud Completada</p>
                                         <span class="date">April 12, 2018 06:50</span>
                                     </div>
                                 </div>
                                 <div class="notifi__item">
                                     <div class="bg-c2 img-cir img-40">
-                                        <i class="zmdi zmdi-account-box"></i>
+                                        <i class="fa fa-times"></i>
                                     </div>
                                     <div class="content">
-                                        <p>Your account has been blocked</p>
+                                        <p><strong>1</strong> Solicitud Rechazada</p>
                                         <span class="date">April 12, 2018 06:50</span>
                                     </div>
                                 </div>
                                 <div class="notifi__item">
                                     <div class="bg-c3 img-cir img-40">
-                                        <i class="zmdi zmdi-file-text"></i>
+                                        <i class="fa fa-thumb-tack"></i>
                                     </div>
                                     <div class="content">
-                                        <p>You got a new file</p>
+                                        <p><strong>2</strong> Solicitudes Pendientes</p>
                                         <span class="date">April 12, 2018 06:50</span>
-                                    </div>
-                                </div>
-                                <div class="notifi__footer">
-                                    <a href="#">All notifications</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="header-button-item js-item-menu">
-                            <i class="zmdi zmdi-settings"></i>
-                            <div class="setting-dropdown js-dropdown">
-                                <div class="account-dropdown__body">
-                                    <div class="account-dropdown__item">
-                                        <a href="#">
-                                            <i class="zmdi zmdi-account"></i>Perfil</a>
-                                    </div>
-                                    <div class="account-dropdown__item">
-                                        <a href="#">
-                                            <i class="zmdi zmdi-settings"></i>Configuración</a>
-                                    </div>
-                                </div>
-                                <div class="account-dropdown__body">
-                                    <div class="account-dropdown__item">
-                                        <a href="#">
-                                            <i class="zmdi zmdi-globe"></i>Mis procesos</a>
                                     </div>
                                 </div>
                             </div>
@@ -138,7 +114,7 @@
                                     <img src="images/icon/avatar-01.jpg" alt="John Doe" />
                                 </div>
                                 <div class="content">
-                                    <a class="js-acc-btn" href="#">Admin</a>
+                                    <a class="js-acc-btn" href="#">Usuario</a>
                                 </div>
                                 <div class="account-dropdown js-dropdown">
                                     <div class="info clearfix">
@@ -149,21 +125,9 @@
                                         </div>
                                         <div class="content">
                                             <h5 class="name">
-                                                <a href="#">Administrador</a>
+                                                <a href="#">Usuario</a>
                                             </h5>
-                                            <span class="email">admin@bitcoude.com</span>
-                                        </div>
-                                    </div>
-                                    <div class="account-dropdown__body">
-                                        <div class="account-dropdown__item">
-                                            <a href="#">
-                                                <i class="zmdi zmdi-account"></i>Perfil</a>
-                                        </div>
-                                        <div class="account-dropdown__item">
-                                            <a href="#">
-                                                <i class="zmdi zmdi-settings"></i>
-                                                Configuración
-                                            </a>
+                                            <span class="email">usuario@bitcoude.com</span>
                                         </div>
                                     </div>
                                     <div class="account-dropdown__footer">
@@ -232,38 +196,33 @@
                     <i class="zmdi zmdi-notifications"></i>
                     <div class="notifi-dropdown notifi-dropdown--no-bor js-dropdown">
                         <div class="notifi__title">
-                            <p>Tienes 3 notificacines</p>
+                            <p>Notificacines</p>
                         </div>
                         <div class="notifi__item">
                             <div class="bg-c1 img-cir img-40">
-                                <i class="zmdi zmdi-email-open"></i>
+                                <i class="fa fa-check"></i>
+                            </div>
+                            <div class="content">
+                                <p><strong>1</strong> Solicitud Completada</p>
+                                <span class="date">April 12, 2018 06:50</span>
                             </div>
                         </div>
                         <div class="notifi__item">
                             <div class="bg-c3 img-cir img-40">
-                                <i class="zmdi zmdi-file-text"></i>
+                                <i class="fa fa-thumb-tack"></i>
                             </div>
                             <div class="content">
-                                <p>Una de tus listas ha sido completada</p>
+                                <p><strong>2</strong> Solicitudes Pendientes</p>
                                 <span class="date">April 12, 2018 06:50</span>
                             </div>
                         </div>
-                        <div class="notifi__footer">
-                            <a href="#">Todas las notificacines</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="header-button-item js-item-menu">
-                    <i class="zmdi zmdi-settings"></i>
-                    <div class="setting-dropdown js-dropdown">
-                        <div class="account-dropdown__body">
-                            <div class="account-dropdown__item">
-                                <a href="#">
-                                    <i class="zmdi zmdi-account"></i>Perfil</a>
+                        <div class="notifi__item">
+                            <div class="bg-c2 img-cir img-40">
+                                <i class="fa fa-times"></i>
                             </div>
-                            <div class="account-dropdown__item">
-                                <a href="#">
-                                    <i class="zmdi zmdi-settings"></i>Configuración</a>
+                            <div class="content">
+                                <p><strong>1</strong> Solicitud Rechazada</p>
+                                <span class="date">April 12, 2018 06:50</span>
                             </div>
                         </div>
                     </div>
@@ -274,7 +233,7 @@
                             <img src="images/icon/avatar-01.jpg" alt="John Doe" />
                         </div>
                         <div class="content">
-                            <a class="js-acc-btn" href="#">john doe</a>
+                            <a class="js-acc-btn" href="#">Usuario</a>
                         </div>
                         <div class="account-dropdown js-dropdown">
                             <div class="info clearfix">
@@ -285,19 +244,9 @@
                                 </div>
                                 <div class="content">
                                     <h5 class="name">
-                                        <a href="#">john doe</a>
+                                        <a href="#">Usuario</a>
                                     </h5>
-                                    <span class="email">johndoe@example.com</span>
-                                </div>
-                            </div>
-                            <div class="account-dropdown__body">
-                                <div class="account-dropdown__item">
-                                    <a href="#">
-                                        <i class="zmdi zmdi-account"></i>Perfil</a>
-                                </div>
-                                <div class="account-dropdown__item">
-                                    <a href="#">
-                                        <i class="zmdi zmdi-settings"></i>Configuración</a>
+                                    <span class="email">usuario@example.com</span>
                                 </div>
                             </div>
                             <div class="account-dropdown__footer">
