--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <!-- Main JS-->
     <script src="js/main.js"></script>
     <script src="js/login.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 </body>
 
