--- a/dashboard.html
+++ b/dashboard.html
@@ -375,7 +375,7 @@
                                 <div class="table-data__tool-left">
                                     <div class="rs-select2--light rs-select2--md">
                                         <select class="js-select2" name="property">
-                                            <option selected="selected">Todos los Procesos</option>
+                                            <option selected="selected">Todos</option>
                                             <option value="">Aprobados</option>
                                             <option value="">En espera de Verificación</option>
                                             <option value="">Pendientes de Entregar</option>
@@ -383,24 +383,12 @@
                                             <option value="">Terminados</option>
                                         </select>
                                         <div class="dropDownSelect2"></div>
-                                    </div>s
+                                    </div>
                                     <div class="rs-select2--light rs-select2--sm">
                                         <select class="js-select2" name="time">
                                             <option selected="selected">Fecha</option>
                                             <option value="">3 Days</option>
                                             <option value="">1 Week</option>
-                                        </select>
-                                        <div class="dropDownSelect2"></div>
-                                    </div>
-                                </div>
-                                <div class="table-data__tool-right">
-                                    <button class="au-btn au-btn-icon au-btn--green au-btn--small">
-                                        <i class="zmdi zmdi-plus"></i>add item</button>
-                                    <div class="rs-select2--dark rs-select2--sm rs-select2--dark2">
-                                        <select class="js-select2" name="type">
-                                            <option selected="selected">Export</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 2</option>
                                         </select>
                                         <div class="dropDownSelect2"></div>
                                     </div>
