--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                             <form action="" method="post">
                                 <div class="form-group">
                                     <label>Nombre de Usuario</label>
-                                    <input class="au-input au-input--full" type="text" name="username" placeholder="usuario" id="loginUser">
+                                    <input class="au-input au-input--full" type="text" name="loginUser" placeholder="newTestUser" id="loginUser">
                                 </div>
                                 <div class="form-group">
                                     <label>Contraseña</label>
-                                    <input class="au-input au-input--full" type="password" name="password" placeholder="123" id="loginPass">
+                                    <input class="au-input au-input--full" type="password" name="loginPass" placeholder="newTestUser" id="loginPass">
                                 </div>
                                 <div class="login-checkbox">
                                     <label>
