--- a/register.html
+++ b/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <!-- Required meta tags-->
@@ -58,7 +58,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="userType">Tipo de Usuario</label>
-                                    <select class="form-control" id="userType" id="formUserType">
+                                    <select class="form-control" id="formUserType">
                                         <option value="admin">Administrador</option>
                                         <option value="solicitante">Solicitante</option>
                                         <option value="bodeguero">Bodeguero</option>
